<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Тест по языку Java</string>
    <string name="action_settings">Settings</string>
    
    <string name="textAccept">Ответить</string>
    <string name="textSkip">Пропустить</string>
    
    
    <string name="tvThemes">СПИСОК ТЕМ:</string>
    <string name="radioButton1">Общие вопросы</string>
    <string name="radioButton2">Синтаксис</string>
    <string name="radioButton3">Объекты и классы</string>
    <string name="radioButton4">Библиотека классов</string>
    <string name="radioButton5">Ход выполнения программы</string>
    <string name="textMainTv">Посмотреть теорию или начать тест по теме:\nОбщие вопросы</string>
    <string name="btnGoTest">Начать тест</string>
    <string name="btnTheory">Читать теорию</string>
    

</resources>
