<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dip"
        android:layout_marginTop="10dip"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/tvThemes"/>

    <RadioGroup 
        android:id="@+id/radioGroup_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="2dip"
        android:orientation="vertical">
        	<RadioButton
				android:id="@+id/radioButton1_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:onClick="onRadioButtonClicked"
				android:text="@string/radioButton1"/>
			<RadioButton
				android:id="@+id/radioButton2_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="onRadioButtonClicked"
				android:text="@string/radioButton2"/>
			<RadioButton
				android:id="@+id/radioButton3_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="onRadioButtonClicked"
				android:text="@string/radioButton3"/>
    </RadioGroup>
    <TextView 
	    android:id="@+id/tvText_id"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="40dip"
	    android:layout_marginLeft="20dip"
	    android:textSize="20sp"
	    android:text="@string/textMainTv"/>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/btnTheory_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:text="@string/btnTheory" />
	    <Button
	        android:id="@+id/btnGoTest_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dip"
	        android:text="@string/btnGoTest" />
    </LinearLayout>


</LinearLayout>
